// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical On Demand Audio Page A11y I can see the skip to content link 1`] = `"Simbira ku birimwo"`;

exports[`Canonical On Demand Audio Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical On Demand Audio Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical On Demand Audio Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "40",
  },
  {
    "p": "gahuza.bbc_gahuza_radio.w172x7rkcj6v0vz.page",
  },
  {
    "x1": "[urn:bbc:pips:w172x7rkcj6v0vz]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-gahuza]",
  },
  {
    "x4": "[rw]",
  },
  {
    "x7": "[player-episode]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Amakuru%20ya%20Gahuzamiryango%20-%20BBC%20News%20Gahuza]",
  },
]
`;

exports[`Canonical On Demand Audio Page Expired Episode I can see the 'Content is not available' placeholder 1`] = `"Ibi ntibikiboneka."`;

exports[`Canonical On Demand Audio Page Expired Episode I can see the brand title 1`] = `"Amakuru ya Gahuzamiryango"`;

exports[`Canonical On Demand Audio Page Expired Episode I can see the episode summary 1`] = `"Amakuru yo hirya no hino yibanda cyane cyane ku karere k'ibiyaga bigari muri Afrika, n'amakuru mpuzamakungu."`;

exports[`Canonical On Demand Audio Page Expired Episode I can see the episode title 1`] = `"Amakuru ya Gahuzamiryango"`;

exports[`Canonical On Demand Audio Page Expired Episode I can see the hero image 1`] = `"https://ichef.bbci.co.uk/images/ic/256x256/p0gwty85.png.webp"`;

exports[`Canonical On Demand Audio Page Expired Episode a11y Assistive technology reads the brand and episode title as the headline 1`] = `"Amakuru ya Gahuzamiryango, Amakuru ya Gahuzamiryango"`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Gahuza",
  "url": "/gahuza",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 2`] = `
{
  "text": "Igituma ushobora kwizera BBC News",
  "url": "https://www.bbc.com/gahuza/institutional-49283343",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 3`] = `
{
  "text": "Ingingo zo gukoresha urubuga",
  "url": "https://www.bbc.com/gahuza/institutional-35754053",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 4`] = `
{
  "text": "Ibijanye na BBC",
  "url": "https://www.bbc.com/gahuza/institutional-35754055",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 5`] = `
{
  "text": "Ibigenga n'ubuzima bwite",
  "url": "https://www.bbc.com/gahuza/institutional-35754059",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 7`] = `
{
  "text": "Vugana na BBC",
  "url": "https://www.bbc.co.uk/gahuza/send/u50853291",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 8`] = `
{
  "text": "Bona amakuru mu zindi ndimi",
  "url": "https://www.bbc.com/ws/languages?xtor=CS1-13-[wsgahuza~N~A39~MBC]-[Owned]&utm_source=mktg",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 9`] = `
{
  "text": "Soma ibijanye n'aho duhagaze ku mihora ijana ahandi",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical On Demand Audio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/gahuza"`;

exports[`Canonical On Demand Audio Page Footer Paragraphs should match text 1`] = `"© 2025 BBC. BBC ntibazwa ibivuye ku zindi mbuga. Soma ibijanye n'aho duhagaze ku mihora ijana ahandi"`;

exports[`Canonical On Demand Audio Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Gahuza",
  "svg": <path
    d="M759.928 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V159.452h23.192a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.267 36.647v-72.699h22.003V265.75h-23.192zM804.187 159.452h73.145v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.451zM982.1 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.44-35.977 2391.54 2391.54 0 01-9.218 35.977 2452.296 2452.296 0 01-9.812 35.978h-24.233a2032.839 2032.839 0 01-14.57-52.628c-4.66-17.74-9.068-35.63-13.23-53.67h24.975a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.771 40.586 3259.894 3259.894 0 0018.881-77.456h22.3a3251.95 3251.95 0 0018.733 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.531a1845.28 1845.28 0 01-13.231 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.47 267.98c-5.848 0-11.62-.645-17.319-1.932a66.227 66.227 0 01-16.428-6.096v-20.516c10.604 6.444 21.854 9.663 33.748 9.663 6.74 0 11.868-1.138 15.387-3.419 3.517-2.28 5.278-5.45 5.278-9.515 0-3.07-.869-5.475-2.602-7.21-1.735-1.733-4.04-3.122-6.913-4.163-2.876-1.04-6.095-2.007-9.663-2.899-5.85-1.387-11.002-2.974-15.462-4.757-4.46-1.784-8.228-3.889-11.299-6.319-3.073-2.427-5.403-5.352-6.987-8.771-1.587-3.42-2.379-7.508-2.379-12.265 0-6.74 1.71-12.537 5.129-17.395 3.42-4.855 8.251-8.597 14.496-11.225 6.244-2.624 13.677-3.939 22.3-3.939 5.65 0 11.199.646 16.65 1.933 5.45 1.289 10.356 3.024 14.72 5.203v20.22c-4.364-2.677-9.293-4.758-14.793-6.245-5.501-1.487-11.028-2.23-16.577-2.23-6.047 0-10.73 1.04-14.05 3.122-3.321 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.379 6.616 1.584 1.635 3.84 2.973 6.764 4.014 2.923 1.04 6.368 2.058 10.333 3.047 5.055 1.29 9.76 2.702 14.123 4.238 4.36 1.537 8.2 3.493 11.522 5.872 3.32 2.379 5.896 5.403 7.73 9.069 1.834 3.668 2.751 8.177 2.751 13.529 0 7.038-1.735 13.06-5.203 18.063-3.47 5.006-8.474 8.823-15.016 11.447-6.541 2.626-14.42 3.94-23.638 3.94z"
  />,
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 1`] = `
{
  "text": "Urupapuro rw'itangiriro",
  "url": "/gahuza",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 2`] = `
{
  "text": "Ibitero bya M23 muri Congo",
  "url": "/gahuza/topics/cx2qn9pqx4yt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 3`] = `
{
  "text": "Ibiyaga binini",
  "url": "/gahuza/topics/c06gq67y3w5t",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 4`] = `
{
  "text": "Afrika",
  "url": "/gahuza/topics/crvnv566zx9t",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 5`] = `
{
  "text": "Mpuzamahanga",
  "url": "/gahuza/topics/c9dvd93jjkkt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 6`] = `
{
  "text": "Ubuzima",
  "url": "/gahuza/topics/cnq68qp4kxjt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 7`] = `
{
  "text": "Imikino",
  "url": "/gahuza/topics/c5qvpq0jzy7t",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 8`] = `
{
  "text": "Amajwi n’amashusho",
  "url": "/gahuza/topics/crldzm936jmt",
}
`;

exports[`Canonical On Demand Audio Page I can see the brand title 1`] = `"Amakuru ya Gahuzamiryango"`;

exports[`Canonical On Demand Audio Page I can see the episode summary 1`] = `"Amakuru yo hirya no hino yibanda cyane cyane ku karere k'ibiyaga bigari muri Afrika, n'amakuru mpuzamakungu."`;

exports[`Canonical On Demand Audio Page I can see the episode title 1`] = `"Amakuru ya Gahuzamiryango"`;

exports[`Canonical On Demand Audio Page I can see the hero image 1`] = `"https://ichef.bbci.co.uk/images/ic/256x256/p0gwty85.png.webp"`;

exports[`Canonical On Demand Audio Page Main heading should match text 1`] = `"Amakuru ya Gahuzamiryango, Amakuru ya Gahuzamiryango"`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 1`] = `
{
  "text": "Amajwi, Amakuru ya Gahuzamiryango, Amakuru ya Gahuzamiryango,  Umwanya bimara 30,00  Umwanya bimara 30:0025 Ukw'icumi na rimwe 2024",
  "url": "/gahuza/bbc_gahuza_radio/w172zyj4c8v48j8",
}
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 2`] = `
{
  "text": "Amajwi, Amakuru ya Gahuzamiryango, Amakuru ya Gahuzamiryango,  Umwanya bimara 30,00  Umwanya bimara 30:0022 Ukw'icumi na rimwe 2024",
  "url": "/gahuza/bbc_gahuza_radio/w172zyj400jqqjt",
}
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 3`] = `
{
  "text": "Amajwi, Amakuru ya Gahuzamiryango, Amakuru ya Gahuzamiryango,  Umwanya bimara 15,00  Umwanya bimara 15:0021 Ukw'icumi na rimwe 2024",
  "url": "/gahuza/bbc_gahuza_radio/w17300mcbq54ng4",
}
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 4`] = `
{
  "text": "Amajwi, Amakuru ya Gahuzamiryango, Amakuru ya Gahuzamiryango,  Umwanya bimara 30,00  Umwanya bimara 30:0020 Ukw'icumi na rimwe 2024",
  "url": "/gahuza/bbc_gahuza_radio/w172zyj400jjxqm",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-152x152.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-180x180.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-384x384.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-512x512.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Canonical link 1`] = `"http://localhost:7080/gahuza/bbc_gahuza_radio/w172x7rkcj6v0vz"`;

exports[`Canonical On Demand Audio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical On Demand Audio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical On Demand Audio Page SEO Heading level 1 1`] = `"Amakuru ya Gahuzamiryango, Amakuru ya Gahuzamiryango"`;

exports[`Canonical On Demand Audio Page SEO Lang attribute 1`] = `"rw"`;

exports[`Canonical On Demand Audio Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "rw",
        "name": "Kinyarwanda",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/gahuza/bbc_gahuza_radio/w172x7rkcj6v0vz",
        "@type": "WebPage",
        "name": "Amakuru ya Gahuzamiryango - Amakuru ya Gahuzamiryango - Gahuza",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
          "width": 1024,
        },
        "name": "BBC News Gahuza",
        "publishingPrinciples": "https://www.bbc.com/gahuza/institutional-49283343",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
      "url": "http://localhost:7080/gahuza/bbc_gahuza_radio/w172x7rkcj6v0vz",
    },
  ],
}
`;

exports[`Canonical On Demand Audio Page SEO OG description 1`] = `"Amakuru yo hirya no hino yibanda cyane cyane ku karere k'ibiyaga bigari muri Afrika, n'amakuru mpuzamakungu."`;

exports[`Canonical On Demand Audio Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p0gwty85.png"`;

exports[`Canonical On Demand Audio Page SEO OG image alt 1`] = `"BBC News Gahuza"`;

exports[`Canonical On Demand Audio Page SEO OG locale 1`] = `"rw-RW"`;

exports[`Canonical On Demand Audio Page SEO OG site name 1`] = `"BBC News Gahuza"`;

exports[`Canonical On Demand Audio Page SEO OG title 1`] = `"Amakuru ya Gahuzamiryango - Amakuru ya Gahuzamiryango - Gahuza - BBC News Gahuza"`;

exports[`Canonical On Demand Audio Page SEO OG type 1`] = `"website"`;

exports[`Canonical On Demand Audio Page SEO OG url 1`] = `"http://localhost:7080/gahuza/bbc_gahuza_radio/w172x7rkcj6v0vz"`;

exports[`Canonical On Demand Audio Page SEO Page title 1`] = `"Amakuru ya Gahuzamiryango - Amakuru ya Gahuzamiryango - Gahuza - BBC News Gahuza"`;

exports[`Canonical On Demand Audio Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical On Demand Audio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical On Demand Audio Page SEO Twitter creator 1`] = `"@bbcgahuza"`;

exports[`Canonical On Demand Audio Page SEO Twitter description 1`] = `"Amakuru yo hirya no hino yibanda cyane cyane ku karere k'ibiyaga bigari muri Afrika, n'amakuru mpuzamakungu."`;

exports[`Canonical On Demand Audio Page SEO Twitter image alt 1`] = `"BBC News Gahuza"`;

exports[`Canonical On Demand Audio Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p0gwty85.png"`;

exports[`Canonical On Demand Audio Page SEO Twitter site 1`] = `"@bbcgahuza"`;

exports[`Canonical On Demand Audio Page SEO Twitter title 1`] = `"Amakuru ya Gahuzamiryango - Amakuru ya Gahuzamiryango - Gahuza - BBC News Gahuza"`;

exports[`Canonical On Demand Audio Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"Amakuru ya Gahuzamiryango, Amakuru ya Gahuzamiryango"`;
